; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/mruby/extr_channel.c_channel_notify_method.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/mruby/extr_channel.c_channel_notify_method.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_mruby_channel_context_t = type { i32, i32 }

@channel_type = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @channel_notify_method to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @channel_notify_method(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.st_h2o_mruby_channel_context_t*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call %struct.st_h2o_mruby_channel_context_t* @mrb_data_get_ptr(i32* %8, i32 %9, i32* @channel_type)
  store %struct.st_h2o_mruby_channel_context_t* %10, %struct.st_h2o_mruby_channel_context_t** %5, align 8
  %11 = load %struct.st_h2o_mruby_channel_context_t*, %struct.st_h2o_mruby_channel_context_t** %5, align 8
  %12 = getelementptr inbounds %struct.st_h2o_mruby_channel_context_t, %struct.st_h2o_mruby_channel_context_t* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @RARRAY_LEN(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %36

16:                                               ; preds = %2
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @mrb_gc_arena_save(i32* %17)
  store i32 %18, i32* %6, align 4
  %19 = load i32*, i32** %3, align 8
  %20 = load %struct.st_h2o_mruby_channel_context_t*, %struct.st_h2o_mruby_channel_context_t** %5, align 8
  %21 = getelementptr inbounds %struct.st_h2o_mruby_channel_context_t, %struct.st_h2o_mruby_channel_context_t* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @mrb_ary_shift(i32* %19, i32 %22)
  store i32 %23, i32* %7, align 4
  %24 = load i32*, i32** %3, align 8
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @mrb_gc_protect(i32* %24, i32 %25)
  %27 = load %struct.st_h2o_mruby_channel_context_t*, %struct.st_h2o_mruby_channel_context_t** %5, align 8
  %28 = getelementptr inbounds %struct.st_h2o_mruby_channel_context_t, %struct.st_h2o_mruby_channel_context_t* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* %7, align 4
  %31 = call i32 (...) @mrb_nil_value()
  %32 = call i32 @h2o_mruby_run_fiber(i32 %29, i32 %30, i32 %31, i32* null)
  %33 = load i32*, i32** %3, align 8
  %34 = load i32, i32* %6, align 4
  %35 = call i32 @mrb_gc_arena_restore(i32* %33, i32 %34)
  br label %36

36:                                               ; preds = %16, %2
  %37 = call i32 (...) @mrb_nil_value()
  ret i32 %37
}

declare dso_local %struct.st_h2o_mruby_channel_context_t* @mrb_data_get_ptr(i32*, i32, i32*) #1

declare dso_local i64 @RARRAY_LEN(i32) #1

declare dso_local i32 @mrb_gc_arena_save(i32*) #1

declare dso_local i32 @mrb_ary_shift(i32*, i32) #1

declare dso_local i32 @mrb_gc_protect(i32*, i32) #1

declare dso_local i32 @h2o_mruby_run_fiber(i32, i32, i32, i32*) #1

declare dso_local i32 @mrb_nil_value(...) #1

declare dso_local i32 @mrb_gc_arena_restore(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
